+ add new page animation: fade + support slideShow position option * fixed slideShow prev button invisible bug

--- a/templates/copies/styles/nyx.css
+++ b/templates/copies/styles/nyx.css
@@ -44,13 +44,13 @@ ul, ol, li {
 }
 
 .nyx-slide-show {
-    width: 100%;
-    height: 100%;
+    overflow: hidden;
 }
 
 .nyx-slide-show ul {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .nyx-slide-show li {
@@ -70,7 +70,7 @@ ul, ol, li {
     height: 0;
     border-top: 50px solid transparent;
     border-bottom: 50px solid transparent;
-    z-index: 10;
+    z-index: 20;
 
     animation-duration: 2s !important;
     animation-iteration-count: infinite;
@@ -104,6 +104,7 @@ ul, ol, li {
     color: #ffffff;
     font-size: 18px;
     line-height: 26px;
+    z-index: 50;
 
     backface-visibility: hidden;
 }
